--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,6 @@ body {
 }
 
 /* Common */
-.debug {
-    /* background-color:burlywood; */
-    /* border: 1px solid black; */
-}
 
 .wrapper {
     width: 100%;
@@ -23,6 +19,16 @@ body {
     content: "";
     display: table;
     clear: both;
+}
+
+.w100 {
+    width: 100%;
+    margin: auto;
+}
+
+.w70 {
+    width: 70%;
+    margin: auto;
 }
 /* Fine common */
 
@@ -40,7 +46,7 @@ body {
 }
 
 .menù ul li img {
-    width: 10%;
+    width: 12%;
     vertical-align: middle;
     
 }
@@ -66,10 +72,65 @@ body {
     text-align: right;
 }
 
-.menù-right ul li:last-child span {
+.menù-right .button {
     background-color: rgb(34, 104, 255);
     color: white;
     padding: 0.5% 2%;
 }
 
+.menù nav ul li a:hover {
+    border-bottom: 2px solid blue
+}
+
 /* Fine menù */
+
+/* Inizio banner */
+.banner {
+    position: relative;
+    padding: 5%;
+    height: 600px;
+    background-color: rgb(175, 206, 231);
+}
+
+.banner h1 {
+    margin: auto;
+    font-size: 400%;
+}
+
+.banner-left {
+    width: 28.5%;
+    float: left;
+    padding-top: 3%;
+}
+
+.banner-left p {
+    font-size: 80%;
+    font-weight: 600;
+}
+
+.button-banner {
+    display: inline-block;
+    margin-top: 8%;
+    background-color: rgb(34, 104, 255);
+    color: white;
+    padding: 1.5% 3.5%;
+    font-size: 90%;
+    margin-bottom: 2%;
+}
+
+.banner-left i{
+    padding-top: 8%;
+}
+
+.banner-right {
+    width: 71.5%;
+    padding-top: 3%;
+}
+
+.banner-right img {
+    position:absolute;
+    right: 10%;
+    width: 55%;
+}
+
+/* Fine banner */
