--- a/css/style.css
+++ b/css/style.css
@@ -132,5 +132,138 @@ body {
     right: 10%;
     width: 55%;
 }
-
 /* Fine banner */
+
+/* Inizio abbonamento */
+.subscription {
+    width: 70%;
+    margin: auto;
+    margin-top: 11%;
+
+}
+
+.subscription h1{
+    font-size: 120%;
+    padding-bottom: 4%;
+}
+
+.subscription span {
+    padding-right: 2%;
+}
+
+
+/* Colonne */
+.column-container {
+    padding-top: 5%;
+    width: 100%;
+}
+
+.column .column-left {
+    float: left;
+    width: 30.6%;
+    margin-right: 4%;
+    height: 780px;
+}
+
+.column .column-center {
+    float: left;
+    width: 30.6%;
+    margin-right: 4%;
+    height: 780px;
+}
+
+.column-right {
+    float: left;
+    width: 30.6%;
+    height: 780px;
+}
+
+.column-left, .column-center, .column-right, .column-bottom {
+    border: 1px solid lightgray;
+}
+
+.column-left .singolo, .column-center .team, .column-right .team, .column-bottom .team {
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid lightgray;
+}
+
+.column-padding {
+    padding: 10% 7.5%;
+}
+
+.padding-top{
+    padding-top: 10%;
+}
+
+.column-padding .bold-gray {
+    display: inline;
+    font-size: 76%;
+    color:  rgb(110, 115, 126);
+    font-weight: 700;
+    padding-bottom: 10%;
+}
+
+.column-padding ul li {
+    padding-bottom: 7%;
+    list-style: none;
+    font-size: 76%;
+}
+
+.column .button-banner {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+}
+
+.column a {
+    color: rgb(34, 104, 255);
+    font-weight: 600;
+}
+
+.column .border-bottom {
+    border-bottom: 1px solid lightgray;
+    padding-bottom: 10%;
+}
+
+.font-size {
+    font-size: 76%;
+}
+
+.fa-check {
+    color: rgb(34, 104, 255);
+    margin-left: -7.5%;
+}
+
+/* Colonna in basso */
+.column-bottom {
+    float: left;
+    width: 100%;
+    margin-top: 5%;
+    /* height: 205px; */
+    border: 1px solid lightgray;
+}
+
+.bottom-content {
+    padding: 3%;
+}
+
+.column-bottom h1 {
+    display: inline-block;
+}
+
+.button-ufficio-vendite {
+    float: right;
+    background-color: rgb(34, 104, 255);
+    color: white;
+    padding: 0.5% 2%;
+    font-size: 76%;
+}
+
+.font-column-bottom {
+    padding-top: 3%;
+    font-size: 76%;
+}
+/* Fine colonna in basso */
+/* Fine abbonamento */
